fixed bug with header image disappearing on mobile

--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -3,11 +3,17 @@ ul {
     flex-direction: row;
     height: 7rem;
     justify-content: space-around;
-    Margin: 0 2rem 0 2rem;
+    Margin: 0 1rem 0 1rem;
+}
+
+ul > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 img {
-    height: 4rem;
+    height: 70px;
 }
 
 li {
@@ -17,10 +23,6 @@ li {
     padding: 0.5rem;
 }
 
-ul li:nth-child(1) {
-    flex-basis: 25%;
-}
-
 li > a {
     text-decoration: underline 0.15em rgba(255, 254, 254, 0.993);
     transition: text-decoration-color 300ms;
@@ -28,4 +30,15 @@ li > a {
 
 li > a:hover {
     text-decoration-color: rgb(0, 0, 0);
+}
+
+@media (min-width: 768px) {
+    ul {
+        Margin: 0 20% 0 20%;
+    }
+
+    ul > div {
+        margin-left: 20%;
+        gap: 10%;
+    }
 }
